# Action_detection_SOP

./: .gitignore  README.md  main.py  oo.py  pyproject.toml
Action_Detection_SOP/: __init__.py  config.py  evidence.py  evidence_io.py  ingest.py  reporting.py  roi.py  run_config.py  runner_mvp.py  session.py  sop_engine.py
Scripts/: __init__.py  auto_annotate_person_coco.py  benchmark_models.py  benchmark_nms.py  build_trt_engine.py  calibrate_roi.py  extract_frames_for_labeling.py  run_sop_mvp.py  testing_basic_detect.py  visualize_detections.py
configs/: metadata.yaml  metadata_PPE.yaml  run_sop_mvp_example.json
tests/: conftest.py  test_evidence.py  test_postprocess_decode.py  test_roll_sessionizer.py  test_sop_engine_mvp_a.py  test_sop_profile.py
yolo_kit/: __init__.py  nms.py  postprocess.py  runtime.py  types.py  visualize.py
yolo_kit/backends/: onnxruntime_backend.py
